# CMakeSkeleton

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo1.cpp  demo2.cpp  package.json  test-script.cmake
configuration/: CMakeLists.txt
dynamicLib/: CMakeLists.txt  dyn1.cpp  dyn2.cpp
dynamicLib/impl-include/: demo_version_private.h  dynamic_version_private.h.in
dynamicLib/include/: dyn-public.h
include/: app.h  demo_version_private.h.in
staticLib/: CMakeLists.txt  stat1.cpp  stat2.cpp
staticLib/impl-include/: stat-private.h  static_version_private.h.in
staticLib/include/: stat-public.h
